// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress 1 1`] = `
<div
  class="progress"
>
  <div
    aria-label="progressbar"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="25"
    class="progress-bar"
    role="progressbar"
    style="width: 25%;"
  />
</div>
`;

exports[`Progress 2 1`] = `
<div
  class="progress"
>
  <div
    aria-label="progressbar"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    class="progress-bar"
    role="progressbar"
    style="width: 100%;"
  />
</div>
`;
